--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,5 @@ repositories {
 
 dependencies {
     implementation 'org.testng:testng:6.14.3'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'io.rest-assured:rest-assured:4.1.1'
 }
