--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,9 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:6.14.3'
     implementation 'io.rest-assured:rest-assured:4.1.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+}
+
+test {
+    useTestNG()
 }
