--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -9,12 +10,13 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useTestNG()
+    systemProperties = System.properties
+}
+
 dependencies {
     implementation 'org.testng:testng:6.14.3'
     implementation 'io.rest-assured:rest-assured:4.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
-}
-
-test {
-    useTestNG()
 }
